@@ -12,3 +12,6 @@ jenkins_user_uid: 1000090000
 # (relative or full) to files containing separate public keys.
 # e.g.: ['mykey.pub', 'otherkey.pub']
 jenkins_authorized_keys: []
+# A list of additional packages that you wish to install on both masters and
+# slaves using the default package manager.
+extra_rpms: []
